# 20172-AI

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  build_google_mock.sh  count_gomoku
AI-report/: report.aux  report.out  report.toc
include/ai/andor/: AStarSearch.hpp
include/ai/game/: Game.hpp  List.hpp  Minimax.hpp  Player.hpp  State.hpp
include/ai/game/gomoku/: AIMover.hpp  Basic.hpp  Heuristic.hpp  InfiniteMatrix.hpp  MatrixRenderer.hpp  MoveOrderer.hpp  SDLWrapper.hpp  State.hpp
include/ai/game/tictactoe/: State.hpp
include/ai/search/: AStarSearch.hpp  BreadthSearch.hpp  DepthSearch.hpp
include/ai/search/imagepuzzle/: Node.hpp  Problem.hpp  State.hpp
include/ai/solving/: ZOL.hpp
src/: CMakeLists.txt  play_tictactoe.cpp
src/ai/andor/: AStarSearch.cpp
src/ai/game/gomoku/: AIMover.cpp  CMakeLists.txt  Heuristic.cpp  InfiniteMatrix.cpp  MatrixRenderer.cpp  MoveOrderer.cpp  SDLWrapper.cpp  State.cpp  main.cpp  main_SDL2.cpp  main_SDLWrapper.cpp
src/ai/search/: AStarSearch.cpp
src/ai/search/imagepuzzle/: Node.cpp  Problem.cpp
src/ai/solving/: CMakeLists.txt  ZOL.cpp  main.cpp
tests/: CMakeLists.txt
tests/ai/andor/: AStarSearchTest.cpp  CMakeLists.txt
tests/ai/game/: CMakeLists.txt  ListTest.cpp  MinimaxTest.cpp
tests/ai/game/gomoku/: AIMoverTest.cpp  CMakeLists.txt  GUITest.cpp  HeuristicTest.cpp  InfiniteMatrixTest.cpp  MoveOrdererTest.cpp  StateTest.cpp
tests/ai/game/tictactoe/: StateTest.cpp
tests/ai/search/: AStarSearchTest.cpp  BreadthSearchTest.cpp  CMakeLists.txt  DepthSearchTest.cpp
tests/ai/search/imagepuzzle/: NodeTest.cpp  ProblemTest.cpp  StateTest.cpp
tests/ai/solving/: CMakeLists.txt  ZOLTest.cpp
